[metadata]
name = logitechd
version = 0.0.1
description = Logitech daemon to control HID++ 1.0 and HID++ 2.0 devices
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Hardware :: Hardware Drivers
url = https://github.com/FFY00/logitechd
project_urls =
    homepage = https://github.com/FFY00/logitechd

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    dbus-objects~=0.0.1
    pyudev

[options.extras_require]
test =
    pytest
    pytest-cov

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = logitechd
default_section = THIRDPARTY

[coverage:run]
omit =
    setup.py

[coverage:paths]
source =
    src

[coverage:html]
show_contexts = true
