[metadata]
name = logitechd
version = 0.0.0
description = A daemon to configure Logitech devices
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    homepage = https://github.com/FFY00/logitechd

[options]
packages = find:
install_requires =
    ioctl
python_requires = >=3.7

[options.extras_require]
docs =
    furo>=2020.11.19b18
    sphinx~=3.0
    sphinx-autodoc-typehints>=1.10
test =
    pytest>=4
    pytest-cov>=2
    pytest-timeout
    pytest-xdist>=1.34
    uhid
typing =
    mypy

[options.package_data]
build =
    py.typed

[tool:pytest]
junit_family = xunit2
norecursedirs = tests/integration/*
markers =
    isolated

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    setup.py

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages

[coverage:html]
show_contexts = true
